2003-11-12  Alexey Starovoytov  <alexey.starovoytov@sun.com> 	    Roger Sayle  <roger@eyesopen.com>

PR optimization/12953
	* tree-inline.c (inline_forbidden_p_1): Added check for BUILT_IN
	before switch by FUNCTION_CODE.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@73502 138bc75d-0d04-0410-961f-82ee72b054a4